@@ -346,6 +346,8 @@ The following additional options are supported:
                 separated by commas (for use via a URL: <tt>postgres:///?search_path=schema1,schema2</tt>), or it
                 can be an array of strings (for use via an option:
                 <tt>Sequel.postgres(search_path: ['schema1', 'schema2'])</tt>).
+:unlogged_tables_default :: Set to true to use UNLOGGED by default for created tables, for potentially better performance
+                            when data integrity is not important.
 :use_iso_date_format :: This can be set to false to not force the ISO date format.  Sequel forces
                         it by default to allow for an optimization.
 
